--- a/public/src/index.html
+++ b/public/src/index.html
@@ -1,17 +1,26 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title>ExpatManual</title>
-  <base href="/">
+	<title>Expat Manual, the travel guide to settle in Sydney</title>
+	<base href="/">
+	
+	<!-- meta -->
+	<meta charset="utf-8">
+	<meta name="description" content="With Expat Manual we want to help you settling in Sydney (for a start). Our goal is to provide articles that matter before, during and after you've established. We all feel the struggle when arriving to a new city to see beyond the touristic attraction.But also to understand the culture, history, and the local laws. We certainly did and that is why we are trying to make it easier for you to pass this initial struggle.">
+	<meta name="author" content="Alexandre Nicol">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="icon" type="image/x-icon" href="favicon.ico">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+	<!-- open graph -->
+	<meta property="og:site_name" content="Expat Manual, the travel guide to settle in Sydney" />  
+	<meta property="og:description" content="With Expat Manual we want to help you settling in Sydney (for a start). Our goal is to provide articles that matter before, during and after you've established. We all feel the struggle when arriving to a new city to see beyond the touristic attraction.But also to understand the culture, history, and the local laws. We certainly did and that is why we are trying to make it easier for you to pass this initial struggle." />  
+	<meta property="og:type" content="website" />  
+	<meta property="og:image" content="https://s3-ap-southeast-2.amazonaws.com/www.expatmanual.info/assets/images/resource_background.jpg" />
 </head>
 <body>
-  <app-root></app-root>
+	<app-root></app-root>
 
-	<!-- Hotjar Tracking Code for http://expatmanual.info -->
+	<!-- hotjar -->
 	<script>
 	    (function(h,o,t,j,a,r){
 	        h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
@@ -22,7 +31,7 @@
 	        a.appendChild(r);
 	    })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
 	</script>
-	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<!-- google analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-122080810-1"></script>
 	<script>
 		window.dataLayer = window.dataLayer || [];
@@ -31,7 +40,5 @@
 	
 		gtag('config', 'UA-122080810-1');
 	</script>
-
-
 </body>
 </html>
