--- a/public/src/index.html
+++ b/public/src/index.html
@@ -12,7 +12,9 @@
 	<link rel="icon" type="image/x-icon" href="favicon.ico">
 
 	<!-- open graph -->
-	<meta property="og:site_name" content="Expat Manual, the travel guide to settle in Sydney" />  
+	<meta property="og:url" content="http://www.expatmanual.info" />  
+	<meta property="og:site_name" content="Expat Manual" />  
+	<meta property="og:title" content="Expat Manual, the travel guide to settle in Sydney" />  
 	<meta property="og:description" content="With Expat Manual we want to help you settling in Sydney (for a start). Our goal is to provide articles that matter before, during and after you've established. We all feel the struggle when arriving to a new city to see beyond the touristic attraction.But also to understand the culture, history, and the local laws. We certainly did and that is why we are trying to make it easier for you to pass this initial struggle." />  
 	<meta property="og:type" content="website" />  
 	<meta property="og:image" content="https://s3-ap-southeast-2.amazonaws.com/www.expatmanual.info/assets/images/resource_background.jpg" />
@@ -39,10 +41,6 @@
 		gtag('js', new Date());
 	
 		gtag('config', 'UA-122080810-1');
-	</script>
-	<!-- Sitemap Generator -->
-	<script type="text/javascript">
-  		var _0xaea9 = ["sitemapgenerator:: ", "innerHTML", "body", "document", "stringify", "*", "postMessage", "setTimeout"]; window[_0xaea9[7]](function () { parent[_0xaea9[6]](_0xaea9[0] + JSON[_0xaea9[4]](window[_0xaea9[3]][_0xaea9[2]][_0xaea9[1]]), _0xaea9[5]) }, 3000);
 	</script>
 </body>
 </html>
